objects/Archive_Job__c.object
<CustomObject>
    <fields>
        <fullName>Cron_Schedule_String__c</fullName>
        <label>Cron Schedule String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Storage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>External Storage</label>
        <referenceTo>External_Storage__c</referenceTo>
        <relationshipLabel>Archive Jobs</relationshipLabel>
        <relationshipName>Archive_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Older_Than_Days__c</fullName>
        <label>Older Than Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Archive Job</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AJ-{0000}</displayFormat>
        <label>Archive Job Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Archive Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>